--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">mvvm_example</string>
+    <string name="movie_title">Título:\u0020</string>
+    <string name="original_title">Título original:\u0020</string>
+    <string name="release_date">Fecha de lanzamiento:\u0020</string>
+    <string name="overview"> Overview:\u0020</string>
+    <string name="image_url">https://image.tmdb.org/t/p/original/</string>
 </resources>
